fix scrollbar overflow errors

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,18 @@
   font-weight: normal;
 }
 
+html {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  overflow-x: hidden;
+  max-width: 100vw;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   background-color: var(--background-color);
   color: var(--text-color);
   transition: background 0.3s, color 0.3s;
